[package]
name = "cronchik"
version = "1.0.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Simple cron notation parser"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/cronchik"
keywords = ["cron", "schedule", "time"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.time]
version = "0.2"
optional = true

[dependencies.statiki]
version = "0.4.3"

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
features = ["serde", "time"]
