[package]
name = "cronchik"
version = "2.0.3"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Simple cron expression parser"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/cronchik"
keywords = ["cron", "schedule", "time"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[features]
std = []

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.time]
version = "0.3"
optional = true

[dependencies.statiki]
version = "0.5"

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
features = ["serde", "time", "std"]

[dev-dependencies.time]
version = "0.3"
features = ["macros"]
